# gps-stuff

./: .flaskenv  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  auto_app.py  docker-compose.yaml  pyproject.toml
.scripts/: docker-build.sh  docker-poetry.sh
gps_stuff/: __init__.py  app.py  cli.py  config.py
gps_stuff/api_clients/: strava.py
gps_stuff/models/: __init__.py  users.py
migrations/: alembic.ini  env.py
migrations/versions/: 2022_07_31_0056-a1d8de87e237_.py  2022_08_13_2118-b7e72302637c_.py
tests/: conftest.py
tests/test_migrations/: conftest.py  test_migrations.py
